--- a/produtos.html
+++ b/produtos.html
@@ -13,7 +13,7 @@
 <header id="cab">
     <div id="logo">
         <a href="index.html">
-            <h1>MOVE</h1>
+            <img src="img/logo_move.png" alt="" srcset="">
         </a>
     </div>
     <nav id="icones">
@@ -37,7 +37,7 @@
         </div>
 
         <div class="filter-group">
-            <button id="category-filter-btn" class="filter-button">Categoria</button>
+            <button id="category-filter-btn" class="filter-button">Categoria &nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp&nbsp ▼ </button>
 
             <div id="category-options" class="filter-submenu">
             </div>
