--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
     <header id="cab">
         <div id="logo">
             <a href="index.html">
-                <h1>MOVE</h1>
+                <img src="img/logo_move.png" alt="" srcset="">
             </a>
         </div>
         <div id="top-bar">
@@ -168,7 +168,7 @@
             <div class="footer-col">
                 <h4>A MOVE</h4>
                 <ul>
-                    <li><a href="sobre.html">Quem Somos</a></li>
+                    <li><a target="_blank" href="sobre.html" >Quem Somos</a></li>
                 </ul>
             </div>
 
