--- a/sobre.html
+++ b/sobre.html
@@ -17,7 +17,7 @@
 <body>
     <header id="cab">
         <div id="logo">
-           <a href="index.html"><h1>MOVE</h1></a>
+           <a href="index.html"><img src="img/logo_move.png" alt="" srcset=""></a>
 
         </nav>
     </header>
