--- a/index.html
+++ b/index.html
@@ -31,8 +31,7 @@
         <nav id="icones">
             
             <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
-            <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone"
-                    id="fav"></a>
+            <a href="favoritos.html"> <img src="img/iconeestrelapreenchido_move.png" style="display:none" alt="Favoritos" class="estrela"id="fav"></a>
             <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
 
         </nav>
@@ -59,19 +58,19 @@
             <div class="filter-group" id="category-filter-group">
                 <div class="esportes-lista">
                     <a href="produtos.html?categoria=tennis" class="esporte">
-                        <img src="img/tenis5.png" alt="Tênis">
+                        <img src="img/tenis5.png" title="Tênis"  alt="Tênis">
                     </a>
                     <a href="produtos.html?categoria=natacao" class="esporte">
-                        <img src="img/natacao2.png" alt="Natação">
+                        <img src="img/natacao2.png" title="Natação" alt="Natação">
                     </a>
                     <a href="produtos.html?categoria=luta" class="esporte">
-                        <img src="img/luta2.png" alt="Luta">
+                        <img src="img/luta2.png" title="Luta" alt="Luta">
                     </a>
                     <a href="produtos.html?categoria=ciclismo" class="esporte">
-                        <img src="img/bike2.png" alt="Bike">
+                        <img src="img/bike2.png" title="Ciclismo" alt="Bike">
                     </a>
                     <a href="produtos.html?categoria=bola" class="esporte">
-                        <img src="img/bolas2.png" alt="Bolas">
+                        <img src="img/bolas2.png" title="Esportes Gerais" alt="Bolas">
                     </a>
                 </div>
         </section>
