--- a/produtos.html
+++ b/produtos.html
@@ -18,7 +18,7 @@
     </div>
     <nav id="icones">
         <a href="carrinho.html"> <img src="img/carrinhogpt.png" alt="Carrinho" class="icone" id="car"></a>
-        <a href="favoritos.html"> <img src="img/favoritogpt.png" style="display:none" alt="Favoritos" class="icone"id="fav"></a>
+            <a href="favoritos.html"> <img src="img/iconeestrelapreenchido_move.png" style="display:none" alt="Favoritos" class="estrela"id="fav"></a>
         <a href="login.html"> <img src="img/logingpt.png" alt="Login" class="icone"></a>
 
 
