--- a/index.html
+++ b/index.html
@@ -174,7 +174,7 @@
             <div class="footer-col">
                 <h4>AJUDA</h4>
                 <ul>
-                    <li><a href="#">Fale Conosco</a></li>
+                    <li><a href="ajuda.html">Fale Conosco</a></li>
                 </ul>
             </div>
 
