--- a/login.html
+++ b/login.html
@@ -28,7 +28,7 @@
 <input type="text" id="loginUsuario" placeholder="Usuário">
 <input type="password" id="loginSenha" placeholder="Senha">
 <button id="botaoLogin">Entrar</button>
-<a href="cadastro.html" id="btnCadastro" class="button">Ir para cadastro</a>
+<a href="cadastro.html" id="btnCadastro" class="button">Cadastre-se</a>
 
 <div id="perfil" style="display:none"></div>
 
